# cudacv-bw

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  main.cpp  rgba_to_grey.cu  to_bw
cudacv-bw/: HW1  Makefile  README.md  image_process  main.cpp  preprocess.cpp  rgba_to_grey.cu  student_func.cu  to_bw  utils.h
